<resources>
    <string name="app_name">Happy Places</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_image">Add Image</string>
    <string name="save">Save</string>
    <string name="no_happy_place_added_yet">No Happy Place Added Yet</string>
    <string name="google_maps_api_key">AIzaSyCHWMInG5_deBZrru8NkTTJpbn_udPUmEY</string>
    <string name="view_on_map">VIEW ON MAP</string>
    <string name="select_current_location">Select Current Location</string>
</resources>